--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,19 @@ a {
   font-weight: 600;
 }
 
+#homebutton {
+  display: none;
+  background-color: rgba(40, 167, 69, 0.7)!important;
+  position: fixed;
+  bottom: 0.8rem;
+  right: 0.8rem;
+  z-index: 1;
+}
+
+#homebutton:hover {
+  background-color: #28a745!important;
+}
+
 /*============= TOP BAR HEADER =============*/
 
 .tb-item {
