--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,13 @@ ul {
   background-color: #28a745!important;
 }
 
+.overlay {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+  z-index: 2;
+}
+
 /*============= TOP BAR HEADER =============*/
 
 .tb-item {
@@ -61,16 +68,16 @@ ul {
   color: #f47629!important;
 }
 
+.active, .active>.nav-link, .nav-link:hover, button:hover {
+  color: #28a745!important;
+}
+
 /*============= NAVIGATION =============*/
 
 .navbar-brand {
   color: #303442!important;
   font-family: 'Poppins', sans-serif;
   font-size: 2rem;
-}
-
-.active>.nav-link, .nav-link:hover {
-  color: #28a745!important;
 }
 
 /*============= CAROUSEL =============*/
@@ -98,7 +105,7 @@ ul {
   z-index: 10;
 }
 
-/*============= 2 col Section About  =============*/
+/*============= two col Section About  =============*/
 
 #img2 {
   margin-left: -10%;
@@ -106,7 +113,7 @@ ul {
   max-width: 60%;
 }
 
-#about {
+.topminus {
   background-color: #ffffff;
   margin-left: -10%;
 }
@@ -115,38 +122,84 @@ ul {
 
 .wrapper {
   position: relative;
+  overflow: hidden;
+  max-height: 500px;
 }
 
-.overlay {
-  width: 100%;
-  /* Full width (cover the whole page) */
-  height: 100%;
-  /* Full height (cover the whole page) */
-  background-color: rgba(0, 0, 0, 0.3);
-  /* Black background with opacity */
-  z-index: 2;
-  /* Specify a stack order in case you're using a different order for other elements */
-}
-
-.ts-img {
-  position: absolute;
-  top: 20%;
-  left: 45%;
-  /* opacity: 0.8; */
-}
-
-.ts-content {
-  top: 0;
-  width: 100%;
-  position: absolute;
-  /* border: 3px orange solid; */
-  text-align: center;
-  padding: 2rem;
+.onethird {
+  height: 500px;
   color: #ffffff;
+  text-align: center;
 }
 
-#Show {
+.onethird img {
+  position: absolute;
+  left: 40%;
+  top: 30%;
+  opacity: 0.6;
+}
+
+.content2 {
+  position: absolute;
+  top: 40%;
+  width: 100%;
+}
+
+.Show {
   display: none;
+}
+
+/* Backgorund Images */
+
+.onethird:first-child {
+  background: url('../img/slideinfo-01.jpg')no-repeat center top/cover;
+}
+
+.onethird:nth-child(2) {
+  background: url('../img/slideinfo-02.jpg') no-repeat center top/cover;
+}
+
+.onethird:nth-child(3) {
+  background: url('../img/slideinfo-03.jpg') no-repeat center top/cover;
+}
+
+/*============= Services =============*/
+
+/* Gallery with filter */
+
+/* 
+.gallery {
+  -webkit-column-count: 3;
+  -moz-column-count: 3;
+  column-count: 3;
+  -webkit-column-width: 33%;
+  -moz-column-width: 33%;
+  column-width: 33%;
+} */
+
+.gallery .pics {
+  -webkit-transition: all 350ms ease;
+  transition: all 350ms ease;
+}
+
+.gallery .animation {
+  -webkit-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
+}
+
+#gallery figure {
+  position: relative;
+  padding-bottom: 8rem;
+}
+
+#gallery figcaption {
+  position: absolute;
+  margin-top: -3rem;
+  margin-right: 3rem;
+  padding: 2rem 1rem 1rem 1rem;
+  background-color: white;
+  line-height: 1.6;
 }
 
 /*============= FOOTER =============*/
@@ -174,21 +227,46 @@ ul {
     border: gray solid 1px;
     padding: 0.5rem;
   }
-  .myform ul {
-    /* border: springgreen solid 2px; */
+}
+
+/* Devices under 768px (md) */
+
+@media (max-width: 767.98px) {
+  .top-bar>.container {
+    padding-right: 0;
+    padding-left: 0
   }
-  /* Devices under 768px (md) */
-  @media (max-width: 767.98px) {
-    .top-bar>.container {
-      padding-right: 0;
-      padding-left: 0
-    }
-    @media (max-width: 576px) {
-      .top-bar>.container {
-        padding: 0 1rem;
-      }
-    }
-    /*============ BOOTSTRAP BREAK POINTS:
+}
+
+/* Devices under 576px (sm) */
+
+@media (max-width: 576px) {
+  .top-bar>.container {
+    padding: 0 1rem;
+  }
+}
+
+/* Devices under 450px (sm) */
+
+@media (max-width: 450px) {
+  .gallery {
+    -webkit-column-count: 1;
+    -moz-column-count: 1;
+    column-count: 1;
+    -webkit-column-width: 100%;
+    -moz-column-width: 100%;
+    column-width: 100%;
+  }
+}
+
+@media (max-width: 400px) {
+  .btn.filter {
+    padding-left: 1.1rem;
+    padding-right: 1.1rem;
+  }
+}
+
+/*============ BOOTSTRAP BREAK POINTS:
 
 Extra small (xs) devices (portrait phones, less than 576px)
 No media query since this is the default in Bootstrap
@@ -206,9 +284,12 @@ Extra (xl) large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) { ... }
 
 =============*/
-    /*-- Bootstrap Mobile Gutter Fix --*/
-    .row, .container-fluid {
-      margin-left: 0px !important;
-      margin-right: 0px !important;
-    }
-    /* font-family: 'Poppins', sans-serif; */
+
+/*-- Bootstrap Mobile Gutter Fix --*/
+
+.row, .container-fluid {
+  margin-left: 0px !important;
+  margin-right: 0px !important;
+}
+
+/* font-family: 'Poppins', sans-serif; */
