--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,10 @@ a {
   font-weight: 600;
 }
 
+a:hover {
+  text-decoration: none;
+}
+
 .poppi {
   font-family: 'Poppins', sans-serif;
 }
@@ -30,8 +34,17 @@ h3 {
   font-family: 'Poppins', sans-serif;
 }
 
+h5 {
+  line-height: 2rem;
+}
+
 ul {
   list-style: none;
+}
+
+.btn:focus, input:focus, textarea:focus {
+  outline: none;
+  box-shadow: none;
 }
 
 #homebutton {
@@ -68,7 +81,7 @@ ul {
   color: #f47629!important;
 }
 
-.active, .active>.nav-link, .nav-link:hover, button:hover {
+.active, .active>.nav-link, .nav-link:hover {
   color: #28a745!important;
 }
 
@@ -167,16 +180,6 @@ ul {
 
 /* Gallery with filter */
 
-/* 
-.gallery {
-  -webkit-column-count: 3;
-  -moz-column-count: 3;
-  column-count: 3;
-  -webkit-column-width: 33%;
-  -moz-column-width: 33%;
-  column-width: 33%;
-} */
-
 .gallery .pics {
   -webkit-transition: all 350ms ease;
   transition: all 350ms ease;
@@ -190,14 +193,14 @@ ul {
 
 #gallery figure {
   position: relative;
-  padding-bottom: 8rem;
+  padding-bottom: 9rem;
 }
 
 #gallery figcaption {
   position: absolute;
   margin-top: -3rem;
   margin-right: 3rem;
-  padding: 2rem 1rem 1rem 1rem;
+  padding: 2rem .5rem 1rem .5rem;
   background-color: white;
   line-height: 1.6;
 }
