--- a/css/style.css
+++ b/css/style.css
@@ -278,8 +278,10 @@ button.filter:hover, button.filter:focus {
   padding: 12px 0 10px 20px;
   border-radius: 2px;
   width: 100%;
+  -webkit-box-shadow: 0 2px 5px rgba(171, 171, 171, .18);
   box-shadow: 0 2px 5px rgba(171, 171, 171, .18);
   outline: none;
+  -webkit-transition: border-color .2s;
   transition: border-color .2s;
   border-radius: 3px;
 }
